--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
     }
 
     .header-image{
-        background: rgba(243,217,220, 0.2);
+        background: rgba(243,217,220, 0.1);
         height: 100vh;
         background-attachment: fixed;
     }
@@ -57,8 +57,8 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
 
     .burger-menu{
         position: absolute;
-        right: 20px;
-        top: 40px;
+        right: 30px;
+        top: 20px;
         font-size: 30px;
     }
 
@@ -66,19 +66,37 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
         display: flex;
         justify-content: space-around;
         margin: 0;
-        padding-top: 55px;
+        padding: 2%;
         background: #F3D9DC;
     }
 
     .header-nav{
-        visibility: hidden;
-        /* display: none; */
+        max-height: 0;
+        overflow: hidden;
+        transition: 0.5s;
+        font-size: 18px;
     }
 
     .header-nav.open{
-        visibility: visible;
-        transition: 10s;
-        /* display: block; */
+        max-height: 100px;
+        transition: max-height 0.5s;
+    }
+
+    @media(max-width: 670px){
+        .header-nav ul{
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .header-nav li{
+            margin: 18px;
+        }
+
+        .header-nav.open{
+            max-height: 250px;
+            transition: 0.5s;
+        }
     }
 
     li, a{
@@ -122,14 +140,15 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
         margin: 0;
     }
 
+    .about-text{
+        width: 40rem;
+    }
 
     .about-content{
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        width: 38rem;
-        margin-left: 10%;
     }
 
     @media(max-width: 1030px){
@@ -141,16 +160,9 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
     }
 
     .about-content ul{
-        width: 600px;
-        font-size: 50px;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
-    }
-
-    ul.tools{
-        width: 59%;
-        padding: 0;
     }
 
     @media(max-width: 1030px){
@@ -158,7 +170,6 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
             width: 90%;
         }
     }
-    
 
     .tools img{
         width: 60px;
@@ -169,9 +180,57 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
         padding-top: 50px;
    }
 
-   .about-image img{
-       border-radius: 20px;
-   }
+    .about-image img{
+        border-radius: 20px;
+    }
+
+    .tools:hover .front{
+        transform: rotateY(180deg);
+    }
+
+    .tools:hover .back{
+        transform: rotateY(0);
+    }
+
+    .card{
+        width: 80%;
+    }
+
+    .front, 
+	.back{
+	 	position: absolute;
+	 	top: 0;
+	 	bottom: 0;
+	 	left: 0;
+	 	right: 0;
+	 	backface-visibility: hidden;
+	 	transition: 1.3s;
+        text-align: center;
+        background: rgba(255, 203, 192, 0.6);
+        box-shadow: 3px 3px #DCDFE4;
+        padding-left: 15px;
+        display: flex;
+        align-items: center;
+    }
+    
+    .back{
+        transform: rotateY(-180deg);
+    }
+
+    .tools{
+        width: 65px;
+        height: 70px;
+        position: relative;
+        perspective: 800px;
+        float: left;
+        padding: 12px;
+        font-size: 16px;
+        margin: 15px 20px;
+    } 
+
+    .tools-text{
+        padding-left: 2px; 
+    }
 
 
                                /* section 2 */
@@ -187,7 +246,7 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
         left: 0;
         width: 100%;
         transform-origin: top left;
-        background: #98B6B1;
+        background: #F0EFF4; 
     } 
 
     .projects-wrapper{
@@ -195,75 +254,99 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
         padding-top: 8%;
     }
 
-   .project-items{
+    .project-items{
        display: flex;
        justify-content: space-evenly;
-       padding-bottom: 7%;
-   }
-
-   @media(max-width: 900px){
-    .project-items{
-        flex-direction: column;
-        align-items: center;
+       padding: 4%;
     }
-}
 
-   .project-item-preview{
+    @media(max-width: 900px){
+        .project-items{
+            flex-direction: column;
+            align-items: center;
+        }
+    }
+
+    .project-item-preview{
        width: 35%;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
-   }
+    }
 
-   @media(max-width: 900px){
-       .project-item-preview{
+    @media(max-width: 900px){
+        .project-item-preview{
            width: 55%;
-       }
-   }
+           order: 1;
+        }
+    }
 
-   .projects-item-preview-links{
-        margin: 20px 5px 20px 5px;
-   }
+    .projects-item-preview-links{
+        margin: 30px 5px 20px 5px;
+        text-align: center;
+    }
 
-   @media(max-width: 900px){
-       .projects-item-preview-links{
+    .projects-item-preview-links a:hover{
+       background: #BC9EC1;
+       transition: 0.5s;
+    }
+
+    @media(max-width: 900px){
+        .projects-item-preview-links{
            display: grid;
-       }
+        }
 
-       .projects-item-preview-links a{
+        .projects-item-preview-links a{
            margin: 3%;
-       }
-   }
+        }
+    }
 
-   .projects-item-preview-links a{
+    .projects-item-preview-links a{
         border: 1px solid black;
         border-radius: 20px;
         padding: 15px 33px;
-}
+        margin: 5px;
+        box-shadow: 5px 3px rgb(98, 98, 100);
+    }
 
-   .project-item-desc{
+
+    .project-item-desc{
        width: 40%;
        line-height: 1.8;
-   }
-
-   @media(max-width: 900px){
-    .project-item-desc{
-        width: 80%;
-        text-align: center;
-        padding-bottom: 3%;
     }
 
     .project-item-desc ul{
-        display: flex;
-        justify-content: space-around;
+       display: flex;
+       justify-content: space-between;
+       padding: 0;
     }
-}
+
+    @media(max-width: 900px){
+        .project-item-desc{
+            width: 80%;
+            text-align: center;
+            padding-bottom: 3%;
+        }
+
+        .project-item-desc ul{
+            display: flex;
+            justify-content: space-around;
+        }
+    }
+
+    h2{
+        font-family: 'Patua One', cursive;
+    }
+
+    .project-item-desc li{
+        color: #A54BFF;
+    }
 
 
            /* section 3 */
         
-   .contact{
+    .contact{
         position: relative;
         top: -110px;
         bottom: 0;
@@ -272,18 +355,18 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
         width: 100%;
         height: 100vh;
         background: #EEEAE9;
-   }
+    }
 
-   .contact-container{
+    .contact-container{
        padding-top: 14%;
        position: relative;
        height: 100vh;
        background: url('../assets/photos/cacti-cactus-cactus-flower-1903965.jpg');
        background-size: cover;
        background-attachment: fixed;
-   }
+    }
 
-   @media(max-width: 800px){
+    @media(max-width: 800px){
         .contact-container{
             padding-top: 27%;
         }
@@ -294,12 +377,18 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
         }
     }  
 
-   .contact-wrapper{
+    .contact-wrapper{
        width: 75%;
        margin: 0 auto;
-   }
+    }
 
-   .contact-form{
+    @media(max-width: 420px){
+       .contact-wrapper{
+           margin: 6%;
+       }
+    }
+
+    .contact-form{
        display: flex;
        flex-direction: column;
        width: 60%;
@@ -307,31 +396,65 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
        padding: 20px;
        border-radius: 20px;
        background: rgba(243,217,220, 0.8);
-   }
+    }
 
-   @media(max-width: 800px){
+    @media(max-width: 800px){
        .contact-form{
            width: 100%;
        }
-   }
+    }
 
-   .contact-label{
+    .contact-label{
        padding: 10px;
-   }
+    }
 
-   .form-container{
-       padding-bottom: 5%;
-   }
+    .up-arrow img{
+       width: 30px;;
+    }
 
+    .up-arrow{
+       position: absolute;
+       bottom: 20%;
+       right: 0;
+       left: 90%;
+    }
+    @media(max-width: 800px){
+        .up-arrow{
+            bottom: 6%;
+        }
+    }
 
+    #submit{
+       padding: 8px;
+       margin-top: 3px;
+       background: rgb(233, 204, 207);
+       border-radius: 10px;
+    }
+    
+    #submit:focus{
+        outline: none;
+    }
                     /* footer */
     .footer{
         position: relative;
-        padding: 15px 0;
-        background-color: #EEEAE9;
-        color: #ffffff;
+        padding: 5px 0;
+        background: #F0EFF4;
+        display: flex;
+        justify-content: center;
     }
 
     .contact-icon{
         width: 25px;
+    }
+
+    .footer-copyright{
+        margin: 8px;
+    }
+
+    .contact-nav ul{
+        display: flex;
+    }
+
+    .contact-nav li{
+        padding: 5px;
     }
